--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -9,7 +9,7 @@
 
 {% block content %}
     <!-- Page Content -->
-    <div class="container">
+<div class="container">
 
     <div class="row">
 
@@ -37,13 +37,13 @@
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
-                        <img class="d-block img-fluid" src="{% static 'vendor/img/slides/slide-1.jpg' %}" alt="First slide">
+                        <img class="d-block img-fluid" src="{%  static 'vendor/img/slides/slide-1.jpg' %}" alt="First slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block img-fluid" src="{% static 'vendor/img/slides/slide-2.jpg' %}" alt="Second slide">
+                        <img class="d-block img-fluid" src="{%  static 'vendor/img/slides/slide-2.jpg' %}" alt="Second slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block img-fluid" src="{% static 'vendor/img/slides/slide-3.jpg' %}" alt="Third slide">
+                        <img class="d-block img-fluid" src="{%  static 'vendor/img/slides/slide-3.jpg' %}" alt="Third slide">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -56,40 +56,21 @@
                 </a>
             </div>
 
-{#            <div class="row">#}
-{#                <div class="col-lg-4 col-md-6 mb-4">#}
-{#                    <div class="card h-100">#}
-{#                        <a href="#">#}
-{#                            <img class="card-img-top"#}
-{#                                 src="{% static 'vendor/img/products/Adidas-hoodie.png' %}"#}
-{#                                 alt="">#}
-{#                        </a>#}
-{#                        <div class="card-body">#}
-{#                            <h4 class="card-title">#}
-{#                                <a href="#">Худи черного цвета с монограммами adidas Originals</a>#}
-{#                            </h4>#}
-{#                            <h5>6 090,00 руб.</h5>#}
-{#                            <p class="card-text">Мягкая ткань для свитшотов. Стиль и комфорт – это образ жизни.</p>#}
-{#                        </div>#}
-{#                        <div class="card-footer text-center">#}
-{#                            <button type="button" class="btn btn-outline-success">Отправить в корзину</button>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
+            <div class="row">
 
             {% for product in products %}
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="card h-100">
                         <a href="#">
                             <img class="card-img-top"
-                                 src="{% static 'vendor/img/products/Adidas-hoodie.png' %}"
+                                 src="{% static 'product.img' %}"
                                  alt="">
                         </a>
                         <div class="card-body">
                             <h4 class="card-title">
                                 <a href="#">{{ product.name}}</a>
                             </h4>
-                            <h5>{{ product.price }}</h5>
+                            <h5>{{ product.price }} руб.</h5>
                             <p class="card-text">{{ product.desc }}</p>
                         </div>
                         <div class="card-footer text-center">
@@ -98,7 +79,6 @@
                     </div>
                 </div>
             {% endfor %}
-
 
             </div>
 
@@ -121,7 +101,7 @@
     </div>
 
 </div>
-    <!-- /.container -->
+<!-- /.container -->
 {% endblock %}
 
 {% block footer %}
