--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -58,27 +58,27 @@
 
             <div class="row">
 
-            {% for product in products %}
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card h-100">
-                        <a href="#">
-                            <img class="card-img-top"
-                                 src="{% static 'product.img' %}"
-                                 alt="">
-                        </a>
-                        <div class="card-body">
-                            <h4 class="card-title">
-                                <a href="#">{{ product.name}}</a>
-                            </h4>
-                            <h5>{{ product.price }} руб.</h5>
-                            <p class="card-text">{{ product.desc }}</p>
-                        </div>
-                        <div class="card-footer text-center">
-                            <button type="button" class="btn btn-outline-success">Отправить в корзину</button>
+                {% for product in products %}
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <div class="card h-100">
+                            <a href="#">
+                                <img class="card-img-top"
+                                     src="{{ product.img }}"
+                                     alt="">
+                            </a>
+                            <div class="card-body">
+                                <h4 class="card-title">
+                                    <a href="#">{{ product.name}}</a>
+                                </h4>
+                                <h5>{{ product.price }} руб.</h5>
+                                <p class="card-text">{{ product.desc }}</p>
+                            </div>
+                            <div class="card-footer text-center">
+                                <button type="button" class="btn btn-outline-success">Отправить в корзину</button>
+                            </div>
                         </div>
                     </div>
-                </div>
-            {% endfor %}
+                {% endfor %}
 
             </div>
 
