--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -61,7 +61,7 @@
                         <div class="card h-100">
                             <a href="#">
                                 <img class="card-img-top"
-                                     src="{% static 'vendor/img/products/' %}{{ product.img }}"
+                                     src="{{product.image.url}}"
                                      alt="">
                             </a>
                             <div class="card-body">
@@ -69,7 +69,7 @@
                                     <a href="#">{{ product.name}}</a>
                                 </h4>
                                 <h5>{{ product.price }} руб.</h5>
-                                <p class="card-text">{{ product.desc|capfirst }}</p>
+                                <p class="card-text">{{product.description|capfirst }}</p>
                             </div>
                             <div class="card-footer text-center">
                                 <button type="button" class="btn btn-outline-success">Отправить в корзину</button>
