--- a/baskets/templates/baskets/basket.html
+++ b/baskets/templates/baskets/basket.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 {% if baskets %}
     <h4 class="mt-3 mb-3 d-flex justify-content-between align-items-center mb-3">
         Корзина <span class="badge badge-secondary badge-pill">3</span>
