--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -63,3 +63,7 @@
         </div>
     </div>
 {% endblock %}
+
+{% block js%}
+    <script src="{% static 'js/basket.js' %}"></script>
+{% endblock %}
