--- a/admins/templates/admins/admin-users-read.html
+++ b/admins/templates/admins/admin-users-read.html
@@ -34,28 +34,35 @@
                             </tr>
                             </tfoot>
                             <tbody>
-                            <tr>
-                                <td><a href="#" style="color: dodgerblue">vokler</a></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td class="text-center"><i class="fas fa-check-circle"></i></td>
-                                <td class="text-center"><i class="fas fa-check-circle"></i></td>
-                            </tr>
-                            <tr>
-                                <td><a href="admin-users-update-delete.html" style="color: dodgerblue">valeriy</a></td>
-                                <td>Valeriy</td>
-                                <td>Pavlikov</td>
-                                <td>valerypavlikov@yandex.ru</td>
-                                <td class="text-center"><i class="fas fa-times-circle"></i></td>
-                                <td class="text-center"><i class="fas fa-times-circle"></i></td>
-                            </tr>
+                            {%  for u in users %}
+                                <tr>
+                                    <td><a href="admin-users-update-delete.html" style="color: dodgerblue">
+                                        {{ u.username }}
+                                    </a></td>
+                                    <td>{{ u.first_name }}</td>
+                                    <td>{{ u.last_name }}</td>
+                                    <td>{{ u.email }}</td>
+                                    <td class="text-center">
+                                        {% if u.is_staff %}
+                                            <i class="fas fa-check-circle"></i></td>
+                                        {% else %}
+                                            <i class="fas fa-times-circle"></i></td>
+                                        {% endif %}
+                                    <td class="text-center">
+                                        {% if u.is_active %}
+                                            <i class="fas fa-check-circle"></i></td>
+                                        {% else %}
+                                            <i class="fas fa-times-circle"></i></td>
+                                        {% endif %}
+
+                                </tr>
+                            {% endfor %}
                             </tbody>
                         </table>
                     </div>
                 </div>
                 <div class="card-footer">
-                    <a href="admin-users-create.html">
+                    <a href="{% url 'admin_staff:admin_users_create'%}">
                         <button class="btn btn-success">Создать пользователя</button>
                     </a>
                 </div>
