--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -45,11 +45,11 @@
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
+                        <span class="sr-only">Предыдущая</span>
                     </a>
                     <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
+                        <span class="sr-only">Следующая</span>
                     </a>
                 </div>
 
@@ -82,14 +82,23 @@
 
                 <nav aria-label="Page navigation example">
                     <ul class="pagination justify-content-center">
-                        <li class="page-item disabled">
-                            <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+                        <li class="page-item {% if not products.has_previous %} disabled {% endif %}">
+                            <a class="page-link" href="{%  if products.has_previous %}
+                                {%  url 'products:page' products.previous_page_number %}
+                                {% else %} #
+                                {% endif %}"
+                               tabindex="-1" aria-disabled="true">Предыдущая</a>
                         </li>
-                        <li class="page-item"><a class="page-link" href="#">1</a></li>
-                        <li class="page-item"><a class="page-link" href="#">2</a></li>
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                        <li class="page-item">
-                            <a class="page-link" href="#">Next</a>
+                        {% for page in products.paginator.page_range %}
+                            <li class="page-item"><a class="page-link" href=" {%  url 'products:page' page %}">
+                                {{ page }}
+                            </a></li>
+                        {% endfor %}
+                        <li class="page-item {% if not products.has_next %} disabled {% endif %}">
+                            <a class="page-link"
+                               href="{%  if products.has_next %} {%  url 'products:page' products.next_page_number %}
+                                {% else %} #
+                                {% endif %}">Следующая</a>
                         </li>
                     </ul>
                 </nav>
