--- a/admins/templates/admins/admin-users-read.html
+++ b/admins/templates/admins/admin-users-read.html
@@ -34,7 +34,7 @@
                             </tr>
                             </tfoot>
                             <tbody>
-                            {%  for u in users %}
+                            {%  for u in object_list %}
                                 <tr>
                                     <td><a href="{% url 'admin_staff:admin_users_update' u.id %}" style="color: dodgerblue">
                                         {{ u.username }}
