--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -39,6 +39,11 @@
                                         <a class="small" href="#">Забыли пароль?</a>
                                         <input class="btn btn-primary" type="submit" value="Авторизоваться">
                                     </div>
+                                    <div class = "card-footer card-text">
+                                        <a href="{% url 'social:begin' 'vk-oauth2' %}?next='/'">
+                                            Войти через vk
+                                        </a>
+                                    </div>
                                     <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
                                         <a href="#">
                                             <i class="fab fa-google fa-2x" style="color: #d9503e;"></i>
