--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -45,7 +45,7 @@
                         <li>
                             <a class="dropdown-item" href="{%  url 'users:profile' user.id %}">{{ user.username }}</a>
                         </li>
-                        <li><a class="dropdown-item" href="orders/orders.html">Заказы</a></li>
+                        <li><a class="dropdown-item" href="{% url 'orders:order_list' %}">Заказы</a></li>
                         {% if user.is_staff or user.is_superuser %}
                             <li><a class="dropdown-item" href="{% url 'admin_staff:index' %}">Админ-панель</a></li>
                         {% endif %}
