--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -55,27 +55,7 @@
 
                 <div class="row">
                 {% for product in products %}
-                    <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="card h-100">
-                            <a href="#">
-                                <img class="card-img-top"
-                                     src="{{product.image.url}}"
-                                     alt="">
-                            </a>
-                            <div class="card-body">
-                                <h4 class="card-title">
-                                    <a href="#">{{ product.name}}</a>
-                                </h4>
-                                <h5>{{ product.price }} руб.</h5>
-                                <p class="card-text">{{product.description|capfirst }}</p>
-                            </div>
-                            <div class="card-footer text-center">
-                                <a href="{%  url 'baskets:basket_add' product.id %}" class="btn btn-outline-success">
-                                    Отправить в корзину
-                                </a>
-                            </div>
-                        </div>
-                    </div>
+                    {% include 'products/includes/product_item.html' with object=product %}
                 {% endfor %}
 
                 </div>
